<resources>
    <string name="app_name">Process</string>
    <string name="general_main_title">Process Services</string>
    <string name="general_navigation_tasks">Tasks</string>
    <string name="general_navigation_processes">Processes</string>
    <string name="general_navigation_process_models">Process Definition Models</string>
    <string name="general_navigation_applications">Applications</string>
    <string name="general_navigation_groups">Groups</string>
    <string name="general_login_title">Get started</string>
    <string name="general_login_title_sign_in">Sign in</string>
    <string name="general_login_server_title">Enter the address to connect to</string>
    <string name="general_login_server_hostname">www.example.com</string>
    <string name="general_login_server_next">Continue</string>
    <string name="general_login_server_done">Done</string>
    <string name="general_login_credentials_title">Enter your credentials</string>
    <string name="general_login_credentials_username">Username</string>
    <string name="general_login_credentials_password">Password</string>
    <string name="general_login_credentials_show_password">Show password</string>
    <string name="general_login_credentials_sign_in">Process Services in the Cloud</string>
    <string name="general_login_credentials_or">or</string>
    <string name="general_login_credentials_connect">Process Services</string>
    <string name="general_login_account_added">Account added!</string>
    <string name="general_login_account_name">Give this account a name (optional)</string>
    <string name="general_copyright_notice">© 2017 – 2020 Alfresco Software, Inc. All rights reserved</string>
    <string name="general_action_clear">Clear</string>
    <string name="general_action_reset">Reset</string>
    <string name="general_action_cancel">Cancel</string>
    <string name="general_action_delete">Delete</string>
    <string name="general_action_close">Cancel</string>
    <string name="general_action_confirm">Confirm</string>
    <string name="general_action_add_checklist">Add checklist</string>
    <string name="general_action_show_more">Show more</string>
    <string name="login_settings_transport_section">Transport Protocol</string>
    <string name="login_settings_transport_https">HTTPS</string>
    <string name="login_settings_transport_port">Port</string>
    <string name="login_settings_service_section">Alfresco Process Services Settings</string>
    <string name="login_settings_service_document">Service Documents</string>
    <string name="login_settings_auth_section">Authentication</string>
    <string name="login_settings_auth_realm">Realm</string>
    <string name="login_settings_auth_client_id">Client ID</string>
    <string name="login_settings_auth_redirect_url">Redirect URL</string>
    <string name="login_settings_reset">Reset to default</string>
    <string name="login_settings_help">Need help</string>
    <string name="app_tasks_title">My tasks</string>
    <string name="app_tasks_description">Access your full task list and work on any tasks assigned to you from any process app. Also, start new processes and tasks.</string>
    <string name="app_error_generic">Sorry, an error occured&#8230;</string>
    <string name="app_error_unknown">Sorry, an error occured while performing the requested operation.</string>
    <string name="app_error_bad_request">An error occured while performing the requested operation</string>
    <string name="app_error_not_found">The resource you are trying to access does not exist</string>
    <string name="app_error_unauthorized">You should sign in in order to perform the requested operation.</string>
    <string name="app_error_forbidden">You are not allowed to perform the requested operation</string>
    <string name="app_error_internal_server_error">Sorry, an unexpected error occured while performing the requested operation.</string>
    <string name="common_filter_title">Filters</string>
    <string name="common_filter_new_filter">New Filter</string>
    <string name="common_filter_edit">Edit</string>
    <string name="common_filter_reset">Reset</string>
    <string name="common_filter_delete">Delete</string>
    <string name="common_filter_delete_title">Delete Filters</string>
    <string name="common_filter_new_filter_name">New Filter</string>
    <string name="common_filter_icon_and_name">Filter Icon and name</string>
    <string name="common_filter_save">Save</string>
    <string name="common_filter_save_hint">Happy with your filter?<br /> Choose an icon and a name then click save.</string>
    <string name="common_filter_search_results">Search results</string>
    <string name="task_filter_text">Filter by</string>
    <string name="task_filter_sort">Sort by</string>
    <string name="task_filter_text_placeholder">Task name</string>
    <string name="task_filter_text_placeholder_long">Search by task name</string>
    <string name="task_filter_created_desc">Newest first</string>
    <string name="task_filter_created_asc">Oldest first</string>
    <string name="task_filter_due_desc">Due last</string>
    <string name="task_filter_due_asc">Due first</string>
    <string name="task_filter_reset">Reset filters</string>
    <string name="task_filter_process_definition">Process Definition</string>
    <string name="task_filter_process_definition_placeholder">Select process definition &#8230;</string>
    <string name="task_filter_state">State</string>
    <string name="task_filter_state_open">open</string>
    <string name="task_filter_state_completed">completed</string>
    <string name="task_filter_assignment">Assignment</string>
    <string name="task_filter_assignment_involved">Tasks where I am involved</string>
    <string name="task_filter_assignment_assignee">Tasks where I am the assignee</string>
    <string name="task_filter_assignment_candidate">Tasks where I am one of the candidates</string>
    <string name="task_filter_assignment_group">Tasks assigned to the group \"%s\""</string>
    <string name="task_alert_assigned">Task \"%1$s\" is now asigned to %2$s</string>
    <string name="task_alert_completed">Task completed</string>
    <string name="task_alert_saved">Task saved</string>
    <string name="task_alert_created">Task \"%1$s\" was created</string>
    <string name="task_alert_person_involved">\"%1$s\" is now involved in %2$s</string>
    <string name="task_alert_person_no_longer_involved">Task \"%1$s\" is no longer involved in %2$s</string>
    <string name="task_alert_related_content_added">\"%1$s\" has been added to the task"</string>
    <string name="task_alert_related_content_added_loading">"\"%1$s\" has been added to the task. The content will be available once retrieved from the external source.</string>
    <string name="task_alert_checklist_added">Task \"%1$s\" was added to checklist</string>
    <string name="task_alert_checklist_removed">Task \"%1$s\\" was removed from checklist</string>
    <string name="task_alert_form_attached">Attached form  \"%1$s\"</string>
    <string name="task_alert_form_removed">Removed form \"%1$s\"</string>
    <string name="task_action_complete_task_with_form">Show form</string>
    <string name="task_action_complete">Complete</string>
    <string name="task_action_claim">Claim</string>
    <string name="task_action_assign">Assign</string>
    <string name="task_action_reassign">Reassign</string>
    <string name="task_action_involve">Involve people</string>
    <string name="task_action_add_comment">Add comment</string>
    <string name="task_action_add_content">Add content</string>
    <string name="task_action_create">Create Task</string>
    <string name="task_action_share_link">Share link</string>
    <string name="task_action_create_confirm">Create</string>
    <string name="task_action_retrieve_info">Retrieve information&#8230;</string>
    <string name="task_action_add_checklist_short">Add task</string>
    <string name="task_action_add_checklist">Add task to checklist</string>
    <string name="task_action_remove_checklist">Remove task to checklist</string>
    <string name="task_action_add_checklist_confirm">Add task to checklist</string>
    <string name="task_action_share_link_long">Sharing Link</string>
    <string name="task_share_link_pattern">Sharing Link</string>
    <string name="task_title_details">Details</string>
    <string name="task_create_new">New Task</string>
    <string name="task_section_people">People</string>
    <string name="task_section_content">Content</string>
    <string name="task_section_comments">Comments</string>
    <string name="task_section_checklists">Checklist</string>
    <string name="task_field_name">Name</string>
    <string name="task_field_description">Description</string>
    <string name="task_field_assignee">Assignee</string>
    <string name="task_field_due">Due</string>
    <string name="task_field_process_instance">Part of process</string>
    <string name="task_field_parent_task">Part of</string>
    <string name="task_field_ended">Ended</string>
    <string name="task_field_duration">Duration</string>
    <string name="task_field_form">Form</string>
    <string name="task_message_due_on">%s</string>
    <string name="task_message_created_on">Created %s</string>
    <string name="task_message_ended_on">Completed %s</string>
    <string name="task_message_no_description">This task has no description</string>
    <string name="task_message_assignee">Assigned to %1$s</string>
    <string name="task_message_no_name">Nameless task</string>
    <string name="task_message_no_assignee">Assigned to nobody</string>
    <string name="task_message_no_duedate">No due date</string>
    <string name="task_message_no_related_content">This task has no related content yet&#8230;</string>
    <string name="task_message_no_people_involved">This task has no people involved yet&#8230;</string>
    <string name="task_message_no_comments">This task has no comments yet&#8230;</string>
    <string name="task_message_no_task_help">You have no current tasks</string>
    <string name="task_message_comment_header">Added by %1$s</string>
    <string name="task_message_new_comment_placeholder">Enter a comment&#8230;</string>
    <string name="task_message_no_form">No form</string>
    <string name="task_help_description">This task has no details yet.</string>
    <string name="task_help_description_2">You can change that by choosing one of these actions:</string>
    <string name="task_help_add_people">Involve someone else and start collaborating</string>
    <string name="task_help_add_comment">Add a comment</string>
    <string name="task_help_add_content">Add a document and share the knowledge</string>
    <string name="task_help_add_checklist">Add a task to checklist</string>
    <string name="task_help_add_first_checklist">Create your own checklist of items needed for this task. You can assign an item to someone else, give it a due date and attach a form from the library</string>
    <string name="task_form_select_title">Select form</string>
    <string name="task_form_select_empty">No form selected</string>
    <string name="task_form_select_forms_error">Error loading forms</string>
    <string name="task_form_select_loading">Loading forms&#8230;</string>
    <string name="task_form_select_no_forms">No forms found</string>
    <string name="task_form_select_attach_form">Attach form</string>
    <string name="task_form_select_remove_form">Remove form</string>
    <string name="task_form_select_current_form">Select form</string>
    <string name="settings_alfresco_install">Install</string>
    <string name="settings_alfresco_install_summary"><![CDATA[<p>You don\'t have Alfresco Content Services Mobile installed in your device.</p> In order to use this integration you need install the Alfresco Content Services Application from the Google Play Store]]></string>
    <string name="settings_alfresco_install_action">Go to Play Store</string>
</resources>