<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright (C) 2005-2015 Alfresco Software Limited.
  ~
  ~ This file is part of Alfresco Activiti Mobile for Android.
  ~
  ~ Alfresco Activiti Mobile for Android is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Lesser General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Alfresco Activiti Mobile for Android is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Lesser General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser General Public License
  ~ along with Alfresco. If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<LinearLayout
    android:id="@+id/validation_panel"
    style="?android:attr/buttonBarStyle"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/secondary_background"
    android:gravity="bottom"
    android:measureWithLargestChild="true"
    android:orientation="horizontal"
    android:paddingLeft="2dip"
    android:paddingRight="2dip"
    android:paddingTop="0dip">

    <Button
        android:id="@+id/clear"
        style="@style/ActivitiTheme.Button.BorderLess"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/general_action_clear" />

    <Button
        android:id="@+id/cancel"
        style="@style/ActivitiTheme.Button.BorderLess"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/general_action_cancel"/>

    <Button
        android:id="@+id/validate_action"
        style="@style/ActivitiTheme.Button.BorderLess"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/general_action_confirm"/>
</LinearLayout>