<!--
  ~  Copyright (C) 2005-2015 Alfresco Software Limited.
  ~
  ~ This file is part of Alfresco Activiti Mobile for Android.
  ~
  ~ Alfresco Activiti Mobile for Android is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Lesser General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Alfresco Activiti Mobile for Android is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Lesser General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser General Public License
  ~ along with Alfresco. If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        style="@style/ActivitiTheme.Container.Padding16"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/alfresco_title"
                style="@style/ActivitiTheme.Text.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="@dimen/d_16"
                android:paddingBottom="@dimen/d_8"
                tools:text="@string/settings_alfresco_install"
                />

            <TextView
                android:id="@+id/alfresco_summary"
                style="@style/ActivitiTheme.Text.Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="@dimen/d_16"
                android:paddingBottom="@dimen/d_8"
                tools:text="@string/settings_alfresco_install_summary"
                />

            <LinearLayout
                android:id="@+id/alfresco_action_container"
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/d_16"
                android:background="@color/accent"
                android:gravity="bottom"
                android:measureWithLargestChild="true"
                android:orientation="horizontal"
                android:paddingLeft="2dip"
                android:paddingRight="2dip"
                android:paddingTop="0dip">

                <Button
                    android:id="@+id/alfresco_action"
                    style="@style/ActivitiTheme.Text.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/activititheme_item_background_holo_light"
                    android:gravity="center"
                    tools:text="@string/settings_alfresco_install_action"
                    android:textColor="@color/secondary_background"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <include
        layout="@layout/footer_validation_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>